<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_network_unavailable">Network unavailable. Please check your connection.</string>
    <string name="retry">Retry</string>
    <string name="type">Type</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="experience">Experience</string>
    <string name="abilities">Abilities</string>
    <string name="no_abilities">No Abilities</string>

    <string name="characters">Characters</string>
    <string name="quests">Quests</string>
    <string name="vehicles">Vehicles</string>
    <string name="weapons">Weapons</string>
    <string name="bricks">Bricks</string>
    <string name="rules">Rules</string>
    <string name="skills">Skills</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="attack">Attack</string>
    <string name="special">Special</string>
    <string name="capacity">Capacity</string>
    <string name="description">Description</string>
</resources>
