<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/questsCard"
        app:layout_constraintBottom_toTopOf="@id/vehiclesCard"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/charactersCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/light_yellow"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageCharacters"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="24dp"
                android:src="@drawable/characters"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvCharacters"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/characters"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageCharacters"
                app:layout_constraintStart_toStartOf="@+id/imageCharacters"
                app:layout_constraintTop_toBottomOf="@+id/imageCharacters"
                tools:text="Characters" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/charactersCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/weaponsCard"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/questsCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageQuests"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="24dp"
                android:src="@drawable/quests"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvQuests"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvQuests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                android:text="@string/quests"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageQuests"
                app:layout_constraintStart_toStartOf="@+id/imageQuests"
                app:layout_constraintTop_toBottomOf="@+id/imageQuests"
                tools:text="Quests" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toBottomOf="@id/charactersCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/weaponsCard"
        app:layout_constraintBottom_toTopOf="@id/bricksCard"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/vehiclesCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageVehicles"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="24dp"
                android:src="@drawable/vehicles"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvVehicles"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvVehicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                android:text="@string/vehicles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageVehicles"
                app:layout_constraintStart_toStartOf="@+id/imageVehicles"
                app:layout_constraintTop_toBottomOf="@+id/imageVehicles"
                tools:text="Vehicles" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toBottomOf="@id/questsCard"
        app:layout_constraintStart_toEndOf="@id/vehiclesCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rulesCard"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/weaponsCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageWeapons"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="24dp"
                android:src="@drawable/weapons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvWeapons"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvWeapons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/weapons"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageWeapons"
                app:layout_constraintStart_toStartOf="@+id/imageWeapons"
                app:layout_constraintTop_toBottomOf="@+id/imageWeapons"
                tools:text="Weapons" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toBottomOf="@id/vehiclesCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rulesCard"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/bricksCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBricks"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="32dp"
                android:src="@drawable/bricks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvBricks"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvBricks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                android:text="@string/bricks"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageBricks"
                app:layout_constraintStart_toStartOf="@+id/imageBricks"
                app:layout_constraintTop_toBottomOf="@+id/imageBricks"
                tools:text="Bricks" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        app:layout_constraintTop_toBottomOf="@id/weaponsCard"
        app:layout_constraintStart_toEndOf="@id/bricksCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        android:id="@+id/rulesCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_yellow"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageRules"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="32dp"
                android:src="@drawable/rules"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvRules"
                tools:srcCompat="@tools:sample/avatars"/>

            <TextView
                android:id="@+id/tvRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:gravity="center"
                android:text="@string/rules"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageRules"
                app:layout_constraintStart_toStartOf="@+id/imageRules"
                app:layout_constraintTop_toBottomOf="@+id/imageRules"
                tools:text="Rules" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
