<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/light_yellow"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Character Name" />

            <LinearLayout
                android:id="@+id/skillsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                app:layout_constraintBottom_toTopOf="@id/statsLayout">

                <TextView
                    android:id="@+id/tvSkill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/skills"
                    android:textAllCaps="false"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/light_yellow"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Skills" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSkills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    android:overScrollMode="never"
                    android:paddingEnd="16dp">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/statsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skillsLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_yellow">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/attackLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/defenseLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvAttackTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/attack"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/tvAttackValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Attack" />

                        <TextView
                            android:id="@+id/tvAttackValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvAttackTitle"
                            tools:text="7" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/defenseLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/speedLayout"
                        app:layout_constraintStart_toEndOf="@id/attackLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvDefenseTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/defense"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/tvDefenseValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Defense" />

                        <TextView
                            android:id="@+id/tvDefenseValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvDefenseTitle"
                            tools:text="8" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/speedLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/defenseLayout"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvSpeedTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/speed"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/tvSpeedValue"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Speed" />

                        <TextView
                            android:id="@+id/tvSpeedValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvSpeedTitle"
                            tools:text="2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/specialCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="14dp"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statsLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_yellow">

                    <TextView
                        android:id="@+id/tvSpecialTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/special"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Special" />

                    <TextView
                        android:id="@+id/tvSpecial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"

                        android:fontFamily="sans-serif-smallcaps"
                        android:text="@string/abilities"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvSpecialTitle"
                        tools:text="This character is extremely awesome in way that you can't even imagine " />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/loaderLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/loaderImage"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/loader" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
